@@ -17,9 +17,10 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.core.io.ResourceLoader;
 
-import java.io.File;
 import java.io.IOException;
+import java.io.InputStream;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
@@ -29,7 +30,6 @@ import static ca.com.idealimport.common.constants.MessageConstants.PERMISSION_PA
 import static ca.com.idealimport.common.constants.MessageConstants.ROLE_PATH;
 import static ca.com.idealimport.common.constants.MessageConstants.STATUS_FILE_PATH;
 import static ca.com.idealimport.common.constants.MessageConstants.USER_PATH;
-
 @RequiredArgsConstructor
 @Configuration
 @Slf4j
@@ -39,67 +39,69 @@ public class InitializerDataConfig {
     private final PermissionControl permissionControl;
     private final RoleControl roleControl;
     private final UserControl userControl;
+    private final ResourceLoader resourceLoader;
+
     @Value("${default.password}")
     private String defaultPassword;
+
     @PostConstruct
     public void loadData() throws IOException {
         log.info("Initializing data loading...");
-        ClassLoader classLoader = getClass().getClassLoader();
-        loadOrderStatus(STATUS_FILE_PATH, classLoader);
-        loadPermission(PERMISSION_PATH, classLoader);
-        loadRole(ROLE_PATH, classLoader);
-        loadUser(USER_PATH, classLoader);
+       // loadOrderStatus(STATUS_FILE_PATH);
+        loadPermission(PERMISSION_PATH);
+        loadRole(ROLE_PATH);
+        loadUser(USER_PATH);
         log.info("Data loading completed.");
     }
 
-    private void loadUser(String filename, ClassLoader classLoader) throws IOException {
+    private void loadUser(String filename) throws IOException {
         List<UserResponseDto> allUser = userControl.findAllUser();
         if (Objects.isNull(allUser) || allUser.isEmpty()) {
             Set<Long> roles = roleControl.findAllRoles().stream().map(RoleResponseDto::roleId).collect(Collectors.toSet());
-            final File file = CommonUtils.readFileFromResources(filename, classLoader);
-            UserDto userDto = ConversionUtils.jsonFileToObject(file, UserDto.class);
-            userDto = userDto.addRoles(roles);
+            try (InputStream inputStream = CommonUtils.readFileFromResources(filename, resourceLoader)) {
+                UserDto userDto = ConversionUtils.jsonStreamToObject(inputStream, UserDto.class);
+                userDto = userDto.addRoles(roles);
                 userControl.createUser(userDto, defaultPassword);
-            log.info("Added {}  user records to the database", userDto);
-
+                log.info("Added {} user records to the database", userDto);
+            }
         }
     }
 
-    private void loadRole(String filename, ClassLoader classLoader) throws IOException {
+    private void loadRole(String filename) throws IOException {
         final List<RoleResponseDto> allRoles = roleControl.findAllRoles();
         if (Objects.isNull(allRoles) || allRoles.isEmpty()) {
-            final File file = CommonUtils.readFileFromResources(filename, classLoader);
-            RoleDto roleDto = ConversionUtils.jsonFileToObject(file, RoleDto.class);
-            Set<Long> longs = permissionControl.findAllPermission().stream()
-                    .map(PermissionDto::permissionId).collect(Collectors.toSet());
-            roleDto = roleDto.addPermissions(longs);
-            RoleResponseDto role = roleControl.createRole(roleDto);
-            log.info("Added {}  role records to the database", role);
+            try (InputStream inputStream = CommonUtils.readFileFromResources(filename, resourceLoader)) {
+                RoleDto roleDto = ConversionUtils.jsonStreamToObject(inputStream, RoleDto.class);
+                Set<Long> longs = permissionControl.findAllPermission().stream()
+                        .map(PermissionDto::permissionId).collect(Collectors.toSet());
+                roleDto = roleDto.addPermissions(longs);
+                RoleResponseDto role = roleControl.createRole(roleDto);
+                log.info("Added {} role records to the database", role);
+            }
         }
     }
 
-    private void loadPermission(String filename, ClassLoader classLoader) throws IOException {
+    private void loadPermission(String filename) throws IOException {
         final List<PermissionDto> allPermission = permissionControl.findAllPermission();
         if (Objects.isNull(allPermission) || allPermission.isEmpty()) {
-            final File file = CommonUtils.readFileFromResources(filename, classLoader);
-            PermissionDto permissionDto = ConversionUtils.jsonFileToObject(file, PermissionDto.class);
-            PermissionDto dto = permissionControl.createPermission(permissionDto);
-            log.info("Added {}  permission records to the database", dto);
+            try (InputStream inputStream = CommonUtils.readFileFromResources(filename, resourceLoader)) {
+                PermissionDto permissionDto = ConversionUtils.jsonStreamToObject(inputStream, PermissionDto.class);
+                PermissionDto dto = permissionControl.createPermission(permissionDto);
+                log.info("Added {} permission records to the database", dto);
+            }
         }
-
     }
 
-    public void loadOrderStatus(String filename, ClassLoader classLoader) throws IOException {
-
+    public void loadOrderStatus(String filename) throws IOException {
         final List<SaleOrderStatusResponseDto> allStatus = statusService.findAllStatus();
         if (Objects.isNull(allStatus) || allStatus.isEmpty()) {
-            final File file = CommonUtils.readFileFromResources(filename, classLoader);
-            final List<SaleOrderStatusDto> statusList = ConversionUtils.jsonFileToList(file, SaleOrderStatusResponse.class)
-                    .stream().map(SaleOrderStatusResponse::getStatusDto)
-                    .map(statusService::createStatus)
-                    .toList();
-            log.info("Added {} status records to the database", statusList.size());
+            try (InputStream inputStream = CommonUtils.readFileFromResources(filename, resourceLoader)) {
+                List<SaleOrderStatusDto> statusList = ConversionUtils.jsonStreamToList(inputStream, SaleOrderStatusResponse.class)
+                        .stream().map(SaleOrderStatusResponse::getStatusDto)
+                        .map(statusService::createStatus)
+                        .collect(Collectors.toList());
+                log.info("Added {} status records to the database", statusList.size());
+            }
         }
-
     }
 }
